# pi-agent-doctor

./: .gitignore  .mcp.json  LICENSE  README.md  package.json
.claude-plugin/: marketplace.json  plugin.json
commands/: agent-connect.md  agent-debug.md  agent-disconnect.md  agent-doctor-adapter.md  agent-doctor-init.md  agent-last-trace.md  agent-report.md  agent-use.md  agent.md  agents.md  diag.md
docs/adr/: 0001-common-http-diagnostic-protocol.md  0002-shared-core-with-host-specific-front-ends.md
extensions/: pydantic-diagnostics.ts
lib/: diagnostic-core.d.ts  diagnostic-core.js
mcp/: server.js
python/: README.md  pyproject.toml
python/pi_agent_doctor/: __init__.py  fastapi_adapter.py  pydantic_adapter.py
