[project]
name = "pi-agent-doctor-adapter"
version = "0.2.0"
description = "Reusable Pydantic AI diagnostic adapter for the pi-agent-doctor Pi package"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "arikru" }]
dependencies = [
  "pydantic-ai-slim>=1.97.0",
]

[project.optional-dependencies]
server = [
  "fastapi>=0.136.1",
  "uvicorn>=0.47.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pi_agent_doctor"]
